--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/store": "^12.1.0",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
+    "list-files-in-dir": "^0.1.5",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
