--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ngrx/effects": "^12.1.0",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "list-files-in-dir": "^0.1.5",
