--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ngrx/store": "^12.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.2",
