--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "@ngrx/effects": "^12.1.0",
+    "@ngrx/router-store": "^12.2.0",
+    "@ngrx/store": "^12.1.0",
     "@ngrx/store-devtools": "^12.1.0",
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
@@ -26,8 +28,7 @@
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "@ngrx/store": "^12.1.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.2",
